# taurusSwap

./: .gitignore  FRONTEND_INTEGRATION_PRD.md  FRONTEND_INTEGRATION_README.md  GTM_PLAN.md  README.md
contracts/: .algokit.toml  .gitignore  README.md  pyproject.toml
contracts/orbital_math/: __init__.py  consolidation.py  constants.py  crossings.py  fixed_point.py  models.py  newton.py  polar.py  sphere.py  ticks.py  torus.py
contracts/scripts/: __init__.py  _deploy_common.py  deploy_localnet.py  deploy_testnet.py  distribute_testnet_assets.py  seed_testnet_pool.py  swap_testnet.py
contracts/smart_contracts/: __init__.py  __main__.py
contracts/smart_contracts/artifacts/orbital_pool/: OrbitalPool.approval.puya.map  OrbitalPool.approval.teal
contracts/smart_contracts/orbital_pool/: __init__.py  contract.py  deploy_config.py
contracts/smart_contracts/orbital_pool/artifacts/: OrbitalPool.approval.puya.map  OrbitalPool.approval.teal
contracts/tests/: test_consolidation.py  test_crossings.py  test_newton.py  test_orbital_pool_contract.py  test_orbital_pool_localnet.py  test_polar.py  test_sphere.py  test_ticks.py  test_torus.py
docs/: 01-problem-statement.md  02-mathematical-foundations.md  03-torus-invariant.md  04-tick-mechanics.md  05-trade-execution.md  06-smart-contract.md  07-sdk.md  08-deployment.md  10-seeding-process.md  FRONTEND_INTEGRATION_PRD.md  ORBITAL_SDK_PRD.md  Orbital_AMM_Deployment_Guide.docx  Orbital_AMM_Implementation_Manual.md  README.md
example/: README.md  package-lock.json  package.json
frontend--old/: index.html  vite.config.ts
(+248 files in other folders)
